module connexion avec js

--- a/jour04/job03/style.css
+++ b/jour04/job03/style.css
@@ -1,6 +1,6 @@
 form
 {
-    width: fit-content;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +8,19 @@ form
     margin: auto;
 }
 
-#filtrer, input+label
+#select-by
+{
+    flex-direction: row;
+    align-items: baseline;
+    border: 1px solid red;
+}
+
+#select-by *
+{
+    margin: auto;
+}
+
+#filtrer input+label
 {
     margin-top: 1em;
 }
